// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResizeDetailsListDialog matches snapshot 1`] = `
<Dialog
  dialogContentProps={
    {
      "closeButtonAriaLabel": "Close",
      "subText": "resizableDetailsList.content.subText",
      "title": "resizableDetailsList.content.title",
      "type": 0,
    }
  }
  hidden={true}
  modalProps={
    {
      "isBlocking": false,
      "styles": {
        "main": {
          "maxWidth": 450,
        },
      },
      "titleAriaId": "Dialog",
    }
  }
  onDismiss={[Function]}
>
  <StyledTextFieldBase
    ariaLabel="resizableDetailsList.content.subText"
    componentRef={
      {
        "current": null,
      }
    }
  />
  <DialogFooter>
    <CustomizedPrimaryButton
      onClick={[Function]}
      text="resizableDetailsList.buttons.resize"
    />
    <CustomizedDefaultButton
      onClick={[Function]}
      text="resizableDetailsList.buttons.cancel"
    />
  </DialogFooter>
</Dialog>
`;

exports[`ResizeDetailsListDialog matches snapshot when dialog is shown 1`] = `
<Dialog
  dialogContentProps={
    {
      "closeButtonAriaLabel": "Close",
      "subText": "resizableDetailsList.content.subText",
      "title": "resizableDetailsList.content.title",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    {
      "isBlocking": false,
      "styles": {
        "main": {
          "maxWidth": 450,
        },
      },
      "titleAriaId": "Dialog",
    }
  }
  onDismiss={[Function]}
>
  <StyledTextFieldBase
    ariaLabel="resizableDetailsList.content.subText"
    componentRef={
      {
        "current": null,
      }
    }
  />
  <DialogFooter>
    <CustomizedPrimaryButton
      onClick={[Function]}
      text="resizableDetailsList.buttons.resize"
    />
    <CustomizedDefaultButton
      onClick={[Function]}
      text="resizableDetailsList.buttons.cancel"
    />
  </DialogFooter>
</Dialog>
`;
